--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -12,7 +12,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment-with-locales.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/js/tempusdominus-bootstrap-4.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
   <script th:src="@{/js/tables.js}"></script>
   <script th:src="@{/js/datatables.js}"></script>
+  <script th:src="@{/js/mask.js}"></script>
   <script th:src="@{/js/theme.min.js}"></script>
 </div>
